# speech-to-latex

./: .gitignore  AudioManager.py  LatexRenderer.py  OpenAIWrapper.py  README.md  main.py  pyproject.toml
prompts/: edit_latex_prompt.txt  generate_latex_prompt.txt
